LIVE-505 Cog should now be clickable. If we add to many items to the top another approach must be made to put the controls over the data overlay

--- a/www/app/stylus/components/SecondLayer/_basketballOverlay.styl
+++ b/www/app/stylus/components/SecondLayer/_basketballOverlay.styl
@@ -54,9 +54,9 @@
 .basketball-overlay-center {
     position:absolute;
     top:0;
-    left: 0;
+    left: 10%;
     color: rgba(255,255,255,0.8);
-    width:100%
+    width:80%
     text-align:center;
 
     .background-box{
