Color is white on the ecommerce

--- a/www/app/stylus/components/_sportSection.styl
+++ b/www/app/stylus/components/_sportSection.styl
@@ -73,6 +73,7 @@
     transition: 0.5s all
     opacity: 0
     pointer-events: none
+    color: black;
     &.show
         opacity: 1
         z-index: 11000
